--- a/index.html
+++ b/index.html
@@ -89,9 +89,13 @@
       </div>
     <div class="row faq">
       <div class="span12">
-	Footer
+	FAQ
 	</div>
       </div>
+    <div class="row footer">
+      <div class="span12">
+	Footer
+	</div>
     </div>
   </body>
 </html>
