Edited product desc in index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	Blank
 	</div>
       <div class="span4 about">
-	About
+	About: This is now in development (branch)
 	</div>
     </div>
     <div class="row heading">
