--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
       height: 124px;
       line-height: 124px;
-      color: green;
+      background-color: "green";
       }
       .thermometer, .order, .social {
-      /* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
+      /* line-heighest to vertically center: http://phrogz.net/css/vertical-align/index.html */
       height: 40px;
       line-height: 40px;
       }
