Some color changes and original content

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
-
-    <!-- <link type="text/css" rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css"> -->
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
     <style type="text/css">
@@ -47,7 +45,11 @@
       /*Main body and headings */
       body {
       font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+      background-color: #DDDDDD
       }
+      /* .container-nav {
+      background-color: #550010
+      } */
       .heading, .subheading {
       font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
       text-align: center;
@@ -70,7 +72,7 @@
       padding: 2% 0%;
       }
       .actions {
-      background-color: #343434;
+      background-color: #550010;
       padding: 3% 0%;
       }
       .video, .thermometer, .order, .social, .statistics {
@@ -130,18 +132,18 @@
 <div class="container">
   <div class="row-fluid heading">
     <div class="span12">
-      <h1>Product</h1>
+      <h1>Cheap Feed</h1>
     </div>
   </div>
   <div class="row-fluid subheading">
     <div class="span12">
-      <p class="lead">One sentence description.</p>
+      <p class="lead">Feed yourself on the cheap... mate.</p>
     </div>
   </div>
     
   <div class="row-fluid pitch">
     <div class="span5 offset1 video">
-      <img class="img-polaroid" src="http://placehold.it/480x300">
+      <img class="img-polaroid" src="http://i.imgur.com/dzDeFVk.jpg">
     </div>
       
     <div class="span5 actions">
@@ -189,11 +191,11 @@
 
 <div class ="row-fluid section1">
   <div class="span5 offset1 asset">
-    <img class="img polaroid" src="http://placehold.it/480x300">
+    <img class="img polaroid" src="http://i.imgur.com/s4P2QXS.jpg">
     </div>
   <div class="span5 copy">
     <p>
-      Lorem ipsum yada yada bacon.
+      Living on a budget is no excuse not to eat well. There is an internet full of recipes and meal ideas at your fingertips. Cheap Feed is undertaking a very simple mission: Empowering people to eat well without breaking the bank. With your generous support, this dream can become a reality.
       </p>
   </div>
 </div>
@@ -201,11 +203,20 @@
 <div class="row-fluid section2">
   <div class="span5 offset1 copy copy-right">
     <p>
-      More fill
+      Anticipated project road map:
       </p>
+    <ul>
+      <li> Complete bitstarter page
+      <li> Build price database
+      <li> Build product-ingredient conversion matrix
+      <li> Launch MVP, which will be maintained as a freebie service
+      <li> Build 'vote with your wallet' tool for feature requests
+      <li> ???
+      <li> Profit!
+      </ul>
     </div>
   <div class="span5 asset">
-    <img class="img-polaroid" src="http://placehold.it/480x300">
+    <img class="img-polaroid" src="http://i.imgur.com/Ar2DtaC.jpg">
     </div>
   </div>
 
